update doc
Signed-off-by: tomsun28 <tomsun28@outlook.com>