@@ -750,7 +750,7 @@ public class MonitorServiceImpl implements MonitorService {
     public void updateAppCollectJob(Job job) {
         List<Monitor> monitors = monitorDao.findMonitorsByAppEquals(job.getApp())
                 .stream().filter(monitor -> monitor.getStatus() != CommonConstants.UN_MANAGE_CODE)
-                .collect(Collectors.toList());
+                .toList();
         List<CollectorMonitorBind> monitorBinds = collectorMonitorBindDao.findCollectorMonitorBindsByMonitorIdIn(
                 monitors.stream().map(Monitor::getId).collect(Collectors.toSet()));
         Map<Long, String> monitorIdCollectorMap = monitorBinds.stream().collect(
